Fix annotation card having wrong width in mini.

--- a/app/less/classes/annotation.less
+++ b/app/less/classes/annotation.less
@@ -82,8 +82,6 @@
 .annotation-card {
     position: relative;
 
-    min-width: @annotation-card-width;
-
     max-height: 0;
     padding: 0 @annotation-card-padding;
     opacity: 0.5;
